# MyClipboard

./: CMakeLists.txt  README.md
Core/: CMakeLists.txt  core.cpp  core.h
Data/: CMakeLists.txt  dao.cpp  dao.h  testDao.cpp  testDao.h
Service/: CMakeLists.txt  service.cpp  service.h
Window/: CMakeLists.txt  customtimepanel.cpp  customtimepanel.h  customtimepanel.ui  datapanel.cpp  datapanel.h  datapanel.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  querytable.cpp  querytable.h  systemtrayicon.cpp  systemtrayicon.h  window.qrc
